fixed spacing issues

--- a/src/pages/RealmScans/style.less
+++ b/src/pages/RealmScans/style.less
@@ -4,14 +4,6 @@
 @textColor: inherit;
 @inputBackground: inherit;
 
-#malStatus,
-#malTotal,
-#malEpisodes,
-#malUserRating,
-#malRating,
-#malVolumes,
-#malTotalVol,
-#malTotalCha,
 #AddMal {
   background: inherit !important;
 }
